# gen/models/service_list.go
@@ -7,13 +7,37 @@ package models
 
 import (
 	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/swag"
 )
 
 // ServiceList service list
 // swagger:model ServiceList
-type ServiceList []string
+type ServiceList struct {
+
+	// services
+	Services []string `json:"services"`
+}
 
 // Validate validates this service list
-func (m ServiceList) Validate(formats strfmt.Registry) error {
+func (m *ServiceList) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ServiceList) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ServiceList) UnmarshalBinary(b []byte) error {
+	var res ServiceList
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
 	return nil
 }
