# openapi/astrolabe_api.yaml
@@ -15,6 +15,8 @@ paths:
             $ref: '#/definitions/ServiceList'
       operationId: listServices
       summary: List available services
+      description: |
+        This returns the list of services that this Astrolabe server supports
   /astrolabe/tasks:
     get:
       produces:
@@ -287,9 +289,12 @@ definitions:
         type: boolean
     type: object
   ServiceList:
-    items:
-      type: string
-    type: array
+    type: object
+    properties:
+      services:
+        items:
+          type: string
+        type: array
   TaskID:
     type: string
   TaskIDList:
